--- a/apps/k-maps/src/index.html
+++ b/apps/k-maps/src/index.html
@@ -18,6 +18,7 @@
     name="keyword"
   />
   <link href="assets/favicon.ico" rel="icon" type="image/x-icon">
+<link href="assets/images/app-icons/reading.svg" rel="icon" type="image/svg+xml">
   <title>k-maps</title>
 </head>
 <body>
