--- a/apps/app-k-maps/src/index.html
+++ b/apps/app-k-maps/src/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <title>app-k-maps</title>
+  <link href="assets/icon/logo.png" rel="icon" type="image/png">
+
 
   <base href="/" />
 
